ImageView에 contentDescription 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">W1401CustomList</string>
+    <string name="item_song_image_desc">노래 앨범 이미지</string>
 </resources>
